[Slideshow] Fix: Layout shift with scrollbars

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -5,6 +5,7 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
+  scrollbar-gutter: stable;
   color-scheme: light;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
